--- a/fotos.html
+++ b/fotos.html
@@ -6,9 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tudo sobre google Glass</title>
-  <link rel="stylesheet" href="_css/estilo.css">
-  <link rel="stylesheet" href="_css/fotos.css">
-  <script languague="javascript" src="_javascript/funcoes.js"></script>
+  <link rel="stylesheet" href="projeto-glass-html5/_css/estilo.css">
+  <link rel="stylesheet" href="projeto-glass-html5/_css/fotos.css">
+  <script languague="javascript" src="projeto-glass-html5/_javascript/funcoes.js"></script>
 
 </head>
 
