--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
         <h2> A revolução do Google está chegando</h2>
       </hgroup>
 
-      <img id="icone" src="_imagens/glass-oculos-preto-peq.png">
+      <img id="icone" src="projeto-glass-html5/_imagens/glass-oculos-preto-peq.png">
       <nav id="menu">
         <ul type="disc">
           <h1>Menu Principal</h1>
-          <li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')">
+          <li onmouseover="mudaFoto('projeto-glass-html5/_imagens/home.png')" onmouseout="mudaFoto('projeto-glass-html5/_imagens/glass-oculos-preto-peq.png')">
             <a href="index.html"> Home</a></li>
-          <li onmouseover="mudaFoto('_imagens/especificacoes.png')"
-            onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="specs.html">Especificações</a></li>
-          <li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')">
+          <li onmouseover="mudaFoto('projeto-glass-html5/_imagens/especificacoes.png')"
+            onmouseout="mudaFoto('projeto-glass-html5/_imagens/glass-oculos-preto-peq.png')"><a href="specs.html">Especificações</a></li>
+          <li onmouseover="mudaFoto('projeto-glass-html5/_imagens/fotos.png')" onmouseout="mudaFoto('projeto-glass-html5/_imagens/glass-oculos-preto-peq.png')">
             <a href="fotos.html">Fotos</a></li>
-          <li onmouseover="mudaFoto('_imagens/multimidia.png')"
-            onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="multimidia.html">Multimídia</a></li>
-          <li onmouseover="mudaFoto('_imagens/contato.png')"
-            onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="fale-conosco.html">Fale conosco</a>
+          <li onmouseover="mudaFoto('projeto-glass-html5/_imagens/multimidia.png')"
+            onmouseout="mudaFoto('projeto-glass-html5/_imagens/glass-oculos-preto-peq.png')"><a href="multimidia.html">Multimídia</a></li>
+          <li onmouseover="mudaFoto('projeto-glass-html5/_imagens/contato.png')"
+            onmouseout="mudaFoto('projeto-glass-html5/_imagens/glass-oculos-preto-peq.png')"><a href="fale-conosco.html">Fale conosco</a>
           </li>
         </ul>
       </nav>
@@ -59,7 +59,7 @@
           companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.</p>
 
         <figure class="foto-legenda">
-          <img src="_imagens/glass-quadro-homem-mulher.jpg">
+          <img src="projeto-glass-html5/_imagens/glass-quadro-homem-mulher.jpg">
           <figcaption>
             <h3>Google Glass</h3>
             <p>Uma nova maneira de ver o mundo</p>
@@ -109,8 +109,8 @@
         <p>O vídeo de divulgação do Google mostra que você pode se transformar em uma espécie de “super-<wbr/>”, já que o aparelho pode indicar a quantos metros você está de seu destino, se o metrô está aberto ou fechado, mostrar o clima, agenda e até mesmo permitir que você marque encontros apenas com comandos de voz.
         </p>
         <div>
-          <video id="filme1" controls poster="_imagens/video-mini01.jpg">
-            <source src="_media/one-day.mp4" type="video/mp4" />
+          <video id="filme1" controls poster="projeto-glass-html5/_imagens/video-mini01.jpg">
+            <source src="projeto-glass-html5/_media/one-day.mp4" type="video/mp4" />
             Desculpe,mas nao foi possivel carregar o video.
           </video>
         </div>
@@ -120,8 +120,8 @@
       <h1>Outras Notícias</h1>
       <h2>Vídeo mais recente</h2>
       <div>
-        <video id="filme2" controls poster="_imagens/video-mini02.jpg">
-          <source src="_media/how-it-feels.mp4" type="video/mp4" />
+        <video id="filme2" controls poster="projeto-glass-html5/_imagens/video-mini02.jpg">
+          <source src="projeto-glass-html5/_media/how-it-feels.mp4" type="video/mp4" />
           Desculpe,mas nao foi possivel carregar o video.
         </video>
       </div>
