--- a/fotos.html
+++ b/fotos.html
@@ -20,19 +20,19 @@
         <h2> A revolução do Google está chegando</h2>
       </hgroup>
 
-      <img id="icone" src="_imagens/fotos.png">
+      <img id="icone" src="projeto-glass-html5/_imagens/fotos.png">
       <nav id="menu">
         <ul type="disc">
           <h1>Menu Principal</h1>
-          <li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/fotos.png')"><a
+          <li onmouseover="mudaFoto('projeto-glass-html5/_imagens/home.png')" onmouseout="mudaFoto('projeto-glass-html5/_imagens/fotos.png')"><a
               href="index.html"> Home</a></li>
-          <li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/fotos.png')"><a
+          <li onmouseover="mudaFoto('projeto-glass-html5/_imagens/especificacoes.png')" onmouseout="mudaFoto('projeto-glass-html5/_imagens/fotos.png')"><a
               href="specs.html">Especificações</a></li>
-          <li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/fotos.png')"><a
+          <li onmouseover="mudaFoto('projeto-glass-html5/_imagens/fotos.png')" onmouseout="mudaFoto('projeto-glass-html5/_imagens/fotos.png')"><a
               href="fotos.html">Fotos</a></li>
-          <li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/fotos.png')"><a
+          <li onmouseover="mudaFoto('projeto-glass-html5/_imagens/multimidia.png')" onmouseout="mudaFoto('projeto-glass-html5/_imagens/fotos.png')"><a
               href="multimidia.html">Multimídia</a></li>
-          <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/fotos.png')"><a
+          <li onmouseover="mudaFoto('projeto-glass-html5/_imagens/contato.png')" onmouseout="mudaFoto('projeto-glass-html5/_imagens/fotos.png')"><a
               href="fale-conosco.html">Fale conosco</a></li>
         </ul>
       </nav>
