--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -29,19 +29,19 @@
         <h2> A revolução do Google está chegando</h2>
       </hgroup>
 
-      <img id="icone" src="projeto-glass-html5/_imagens/contato.png">
+      <img id="icone" src="_imagens/contato.png">
       <nav id="menu">
         <ul type="disc">
           <h1>Menu Principal</h1>
-          <li onmouseover="mudaFoto('projeto-glass-html5/_imagens/home.png')" onmouseout="mudaFoto('projeto-glass-html5/_imagens/contato.png')"><a
+          <li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a
               href="index.html"> Home</a></li>
-          <li onmouseover="mudaFoto('projeto-glass-html5/_imagens/especificacoes.png')" onmouseout="mudaFoto('projeto-glass-html5/_imagens/contato.png')"><a
+          <li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a
               href="specs.html">Especificações</a></li>
-          <li onmouseover="mudaFoto('projeto-glass-html5/_imagens/fotos.png')" onmouseout="mudaFoto('projeto-glass-html5/_imagens/contato.png')"><a
+          <li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a
               href="fotos.html">Fotos</a></li>
-          <li onmouseover="mudaFoto('projeto-glass-html5/_imagens/multimidia.png')" onmouseout="mudaFoto('projeto-glass-html5/_imagens/contato.png')"><a
+          <li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a
               href="multimidia.html">Multimídia</a></li>
-          <li onmouseover="mudaFoto('projeto-glass-html5/_imagens/contato.png')" onmouseout="mudaFoto('projeto-glass-html5/_imagens/contato.png')"><a
+          <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a
               href="fale-conosco.html">Fale conosco</a></li>
         </ul>
       </nav>
@@ -129,7 +129,7 @@
         </form>
 
 
-        <input type="image" name="tEnviar" src="projeto-glass-html5/_imagens/botao-enviar.png" />
+        <input type="image" name="tEnviar" src="_imagens/botao-enviar.png" />
 
     </section>
 
