--- a/multimidia.html
+++ b/multimidia.html
@@ -20,19 +20,19 @@
         <h2> A revolução do Google está chegando</h2>
       </hgroup>
 
-      <img id="icone" src="projeto-glass-html5/_imagens/multimidia.png">
+      <img id="icone" src="_imagens/multimidia.png">
       <nav id="menu">
         <ul type="disc">
           <h1>Menu Principal</h1>
-          <li onmouseover="mudaFoto('projeto-glass-html5/_imagens/home.png')" onmouseout="mudaFoto('projeto-glass-html5/_imagens/multimidia.png')"><a
+          <li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a
               href="index.html"> Home</a></li>
-          <li onmouseover="mudaFoto('projeto-glass-html5/_imagens/especificacoes.png')" onmouseout="mudaFoto('projeto-glass-html5/_imagens/multimidia.png')"><a
+          <li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a
               href="specs.html">Especificações</a></li>
-          <li onmouseover="mudaFoto('projeto-glass-html5/_imagens/fotos.png')" onmouseout="mudaFoto('projeto-glass-html5/_imagens/multimidia.png')"><a
+          <li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a
               href="fotos.html">Fotos</a></li>
-          <li onmouseover="mudaFoto('projeto-glass-html5/_imagens/multimidia.png')" onmouseout="mudaFoto('projeto-glass-html5/_imagens/multimidia.png')"><a
+          <li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a
               href="multimidia.html">Multimídia</a></li>
-          <li onmouseover="mudaFoto('projeto-glass-html5/_imagens/contato.png')" onmouseout="mudaFoto('projeto-glass-html5/_imagens/multimidia.png')"><a
+          <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a
               href="fale-conosco.html">Fale conosco</a></li>
         </ul>
       </nav>
@@ -49,11 +49,11 @@
         </header>
         <div id="tv-radio">
           <audio id="musica" controls>
-            <source src="projeto-glass-html5/_media/2009-lovers-carvings-bibio.mp3" type="audio/mpeg" />
+            <source src="_media/2009-lovers-carvings-bibio.mp3" type="audio/mpeg" />
             Desculpe,mas nao foi possivel carregar o audio.
           </audio>
-          <video id="filme" controls poster="projeto-glass-html5/_imagens/video-mini03.jpg">
-            <source src="projeto-glass-html5/_media/getting-started.mp4" type="video/mp4" />
+          <video id="filme" controls poster="_imagens/video-mini03.jpg">
+            <source src="_media/getting-started.mp4" type="video/mp4" />
             Desculpe,mas nao foi possivel carregar o video.
           </video>
 
