--- a/multimidia.html
+++ b/multimidia.html
@@ -6,9 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tudo sobre google Glass</title>
-  <link rel="stylesheet" href="_css/estilo.css">
-  <link rel="stylesheet" href="_css/media.css">
-  <script languague="javascript" src="_javascript/funcoes.js"></script>
+  <link rel="stylesheet" href="css/estilo.css">
+  <link rel="stylesheet" href="css/media.css">
+  <script languague="javascript" src="javascript/funcoes.js"></script>
 
 </head>
 
@@ -20,19 +20,19 @@
         <h2> A revolução do Google está chegando</h2>
       </hgroup>
 
-      <img id="icone" src="_imagens/multimidia.png">
+      <img id="icone" src="imagens/multimidia.png">
       <nav id="menu">
         <ul type="disc">
           <h1>Menu Principal</h1>
-          <li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a
+          <li onmouseover="mudaFoto('imagens/home.png')" onmouseout="mudaFoto('imagens/multimidia.png')"><a
               href="index.html"> Home</a></li>
-          <li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a
+          <li onmouseover="mudaFoto('imagens/especificacoes.png')" onmouseout="mudaFoto('imagens/multimidia.png')"><a
               href="specs.html">Especificações</a></li>
-          <li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a
+          <li onmouseover="mudaFoto('imagens/fotos.png')" onmouseout="mudaFoto('imagens/multimidia.png')"><a
               href="fotos.html">Fotos</a></li>
-          <li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a
+          <li onmouseover="mudaFoto('imagens/multimidia.png')" onmouseout="mudaFoto('imagens/multimidia.png')"><a
               href="multimidia.html">Multimídia</a></li>
-          <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a
+          <li onmouseover="mudaFoto('imagens/contato.png')" onmouseout="mudaFoto('imagens/multimidia.png')"><a
               href="fale-conosco.html">Fale conosco</a></li>
         </ul>
       </nav>
@@ -49,11 +49,11 @@
         </header>
         <div id="tv-radio">
           <audio id="musica" controls>
-            <source src="_media/2009-lovers-carvings-bibio.mp3" type="audio/mpeg" />
+            <source src="media/2009-lovers-carvings-bibio.mp3" type="audio/mpeg" />
             Desculpe,mas nao foi possivel carregar o audio.
           </audio>
-          <video id="filme" controls poster="_imagens/video-mini03.jpg">
-            <source src="_media/getting-started.mp4" type="video/mp4" />
+          <video id="filme" controls poster="imagens/video-mini03.jpg">
+            <source src="media/getting-started.mp4" type="video/mp4" />
             Desculpe,mas nao foi possivel carregar o video.
           </video>
 
