--- a/specs.html
+++ b/specs.html
@@ -6,9 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tudo sobre google Glass</title>
-  <link rel="stylesheet" href="_css/estilo.css">
-  <link rel="stylesheet" href="_css/specs.css">
-  <script languague="javascript" src="_javascript/funcoes.js"></script>
+  <link rel="stylesheet" href="css/estilo.css">
+  <link rel="stylesheet" href="css/specs.css">
+  <script languague="javascript" src="javascript/funcoes.js"></script>
 
 </head>
 
@@ -20,19 +20,19 @@
         <h2> A revolução do Google está chegando</h2>
       </hgroup>
 
-      <img id="icone" src="_imagens/especificacoes.png">
+      <img id="icone" src="imagens/especificacoes.png">
       <nav id="menu">
         <ul type="disc">
           <h1>Menu Principal</h1>
-          <li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/especificacoes.png')"><a
+          <li onmouseover="mudaFoto('imagens/home.png')" onmouseout="mudaFoto('imagens/especificacoes.png')"><a
               href="index.html"> Home</a></li>
-          <li onmouseover="mudaFoto('_imagens/especificacoes.png')"
-            onmouseout="mudaFoto('_imagens/especificacoes.png')"><a href="specs.html">Especificações</a></li>
-          <li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/especificacoes.png')"><a
+          <li onmouseover="mudaFoto('imagens/especificacoes.png')"
+            onmouseout="mudaFoto('imagens/especificacoes.png')"><a href="specs.html">Especificações</a></li>
+          <li onmouseover="mudaFoto('imagens/fotos.png')" onmouseout="mudaFoto('imagens/especificacoes.png')"><a
               href="fotos.html">Fotos</a></li>
-          <li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/especificacoes.png')"><a
+          <li onmouseover="mudaFoto('imagens/multimidia.png')" onmouseout="mudaFoto('imagens/especificacoes.png')"><a
               href="multimidia.html">Multimídia</a></li>
-          <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/especificacoes.png')"><a
+          <li onmouseover="mudaFoto('imagens/contato.png')" onmouseout="mudaFoto('imagens/especificacoes.png')"><a
               href="fale-conosco.html">Fale conosco</a></li>
         </ul>
       </nav>
@@ -53,7 +53,7 @@
           Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.</p>
 
         <section id="conteudo">
-          <img src="_imagens/glass-esquema-marcado.png" usemap="#meumapa">
+          <img src="imagens/glass-esquema-marcado.png" usemap="#meumapa">
           <map name="meumapa">
             <area shape="rect" coords="179,202,270,260" href="google-glass.html#tela" target="janela" />
             <area shape="circle" coords="158,243,12" href="google-glass.html#camera" target="janela" />
